--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,17 +20,18 @@
         <activity android:name=".activity.SharePreferenceActivity">
         </activity>
         <activity android:name=".activity.FragmentsActivity" >
+        </activity>
+        <activity android:name=".activity.PermissionsActivity" >
+        </activity>
+        <activity android:name=".activity.BroadcastActivity" />
+        <activity android:name=".activity.POCActivity" />
+        <activity android:name=".activity.MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.PermissionsActivity" >
-        </activity>
-        <activity android:name=".activity.BroadcastActivity" />
-        <activity android:name=".activity.POCActivity" />
-        <activity android:name=".activity.MainActivity" />
         <receiver android:name=".poc.AirPlaneBroadcastReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.AIRPLANE_MODE" />
