--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,18 +19,19 @@
         </activity>
         <activity android:name=".activity.SharePreferenceActivity">
         </activity>
-        <activity android:name=".activity.FragmentsActivity" >
-        </activity>
-        <activity android:name=".activity.PermissionsActivity" >
-        </activity>
-        <activity android:name=".activity.BroadcastActivity" />
-        <activity android:name=".activity.POCActivity" />
-        <activity android:name=".activity.MainActivity" >
+        <activity android:name=".activity.FragmentsActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".activity.PermissionsActivity" >
+        </activity>
+        <activity android:name=".activity.BroadcastActivity" >
+        </activity>
+        <activity android:name=".activity.POCActivity" />
+        <activity android:name=".activity.MainActivity" >
         </activity>
         <receiver android:name=".poc.AirPlaneBroadcastReceiver">
             <intent-filter>
