--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.luxoft.films">
 
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
+    <uses-feature android:name="android.hardware.type.watch" />
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
@@ -13,27 +17,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Films">
-        <activity android:name=".activity.SecondActivity">
-        </activity>
-        <activity android:name=".activity.FirstActivity" >
-        </activity>
-        <activity android:name=".activity.SharePreferenceActivity">
-        </activity>
-        <activity android:name=".activity.FragmentsActivity">
-        </activity>
-        <activity android:name=".activity.PermissionsActivity" >
-        </activity>
-        <activity android:name=".activity.BroadcastActivity" >
-        </activity>
-        <activity android:name=".activity.POCActivity" >
-        </activity>
-        <activity android:name=".activity.MainActivity" >
+        <activity android:name=".activity.DataBaseActivity"
+            android:screenOrientation="sensorPortrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.SecondActivity" />
+        <activity android:name=".activity.FirstActivity" />
+        <activity android:name=".activity.SharePreferenceActivity" />
+        <activity android:name=".activity.FragmentsActivity" />
+        <activity android:name=".activity.PermissionsActivity" />
+        <activity android:name=".activity.BroadcastActivity" />
+        <activity android:name=".activity.POCActivity" />
+        <activity android:name=".activity.MainActivity"/>
+
         <receiver android:name=".poc.AirPlaneBroadcastReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.AIRPLANE_MODE" />
